objects/Text_Module__c.object
<CustomObject>
    <fields>
        <fullName>Correspondence__c</fullName>
        <label>Korrespondenz</label>
        <referenceTo>Correspondence__c</referenceTo>
        <relationshipLabel>Textbausteine</relationshipLabel>
        <relationshipName>Text_Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Textbaustein_ID__c</fullName>
        <label>Old Textbaustein ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Correspondence__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Textbaustein</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Textbausteine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>